--- a/ForexMarket/appsettings.json
+++ b/ForexMarket/appsettings.json
@@ -10,7 +10,7 @@
   },
   "AllowedHosts": "*",
   "WazeForecast": {
-    "ForecastTrackerEnabled": true
+    "ForecastTrackerEnabled": false
   },
   "Stripe": {
     "SecretKey": "sk_test_WKWERWEDF324234l1BJwR00mx0mZGy8",
