--- a/ForexMarket/appsettings.json
+++ b/ForexMarket/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ForexMarket-f97f12cd-22de-4e6a-9845-2c9f7cf0ef60;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LAPTOP-IFPG73AJ;Database=ForexMarket;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
