Add protector attribute to action level.

--- a/ForexMarket/appsettings.json
+++ b/ForexMarket/appsettings.json
@@ -25,6 +25,7 @@
     "SendGridKey": "SengGridSampleKey11112222"
   },
   "Security": {
-    "validIp": "100.0.0.1"
+    "validIp": "0.0.0.1",
+    "Admin": "yeed"
   }
 }
